<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:title="@string/nav_item_products" />
        <item
            android:id="@+id/nav_cart"
            android:title="@string/nav_item_cart" />
        <item
            android:id="@+id/nav_alarms"
            android:title="Alarmas" />
        <item
            android:id="@+id/nav_multimedia"
            android:title="@string/nav_item_multimedia" />
        <item
            android:id="@+id/nav_camara"
            android:title="@string/nav_item_camara" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_item_logout" />
    </group>
</menu>