<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CamaraActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/titulo_camara"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_lector" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_foto" />

</LinearLayout>